# sebi-cscrf

./: .gitignore  CLAUDE.md  LICENSE  README.md  SCHEMA.md  pyproject.toml
.claude/agents/: cscrf-analyst.md  cscrf-gap-analyst.md  cscrf-policy-drafter.md  cscrf-reviewer.md  cscrf-roadmap-planner.md
.claude/skills/: CHANGELOG.md
.claude/skills/ciso/: SKILL.md
.claude/skills/ciso-assess/: SKILL.md
.claude/skills/ciso-assess/references/: assessment-template.md  (+4 more)
.claude/skills/ciso-policy/: SKILL.md
docs/: mandatory-requirements-small-size-mf-amc.md
framework/detect/: de-cm.md  de-dp.md
framework/evolve/: ev-st.md
framework/governance/: gv-oc.md  gv-ov.md  gv-po.md  gv-rm.md  gv-rr.md  gv-sc.md
framework/identify/: id-am.md  id-ra.md
framework/protect/: pr-aa.md  pr-at.md  pr-ds.md  pr-ip.md  pr-ma.md
framework/recover/: rc-co.md  rc-im.md  rc-rp.md
framework/respond/: rs-an.md  rs-co.md  rs-im.md  rs-ma.md
meta/: abbreviations.md  compliance.md  definitions.md  it-committee.md
scripts/: eval_skills.sh  eval_skills_api.py  install_ciso_fixtures.sh  package_skills.sh  validate_agent_versions.py  validate_ciso_outputs.py  validate_skill_functional_contracts.py  validate_skill_mappings.py  validate_trigger_suite.py  verify-ciso-artifacts.sh
sources/: README.md
tests/fixtures/ciso-work/: entity-profile.json  entity-profile.md  entity-tags.json  gap-analysis.json  gap-analysis.md  policy-plan.md  review-findings.md  roadmap.md
tests/fixtures/policies/: access-control.md
tests/skills/functional/: ciso-assess.yaml  ciso-policy.yaml  ciso.yaml
(+25 files in other folders)
